--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-target/**
-.settings/**
+# Java bytecode
+*.class
+
+# Eclipse
 .classpath
 .project
+.settings/**
+
+# idea
+*.iml
+*.idea
+
+# VIM
 *.swp
+*~
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Maven
+target/**
