--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--
-  ~ Copyright (c) 2015 - Max Schrimpf, Reto Hablützel
+  ~ Copyright (c) 2012 - Reto Hablützel, Max Schrimpf, Désirée Sacher
   ~
   ~ Licensed under the EUPL, Version 1.1 or – as soon they will be approved by the European Commission - subsequent versions of the EUPL (the "Licence");
   ~ You may not use this work except in compliance with the Licence.
